--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,8 +1,6 @@
 <resources>
     <string name="app_name">Shelper</string>
 
-    <string name="activity_error_oops">Oops!</string>
-    <string name="activity_error_internet">Can\'t styling because the internet is unstable 😢</string>
-    <string name="activity_error_exception">The carrot was eaten by the rabbit! Please try again later.</string>
-    <string name="activity_error_btn_retry">Retry</string>
+    <string name="activity_error_title">일시적인 오류입니다</string>
+    <string name="activity_error_btn_retry">새로고침</string>
 </resources>
