--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,5 +1,21 @@
+<?xml version="1.0" encoding="utf-8"?><!--
+  ~ Shelper © 2022 Team Helper. all rights reserved.
+  ~ Shelper license is under the MIT.
+  ~
+  ~ [strings.xml] created by Ji Sungbin on 22. 1. 29. 오후 10:11
+  ~
+  ~ Please see: https://github.com/gdsckoreahackathon2022/01_Helper/blob/main/LICENSE.
+  -->
+
 <resources>
     <string name="app_name">Shelper</string>
+
+    <string name="locus_rationale_title">위치 권한 필요</string>
+    <string name="locus_rationale_message">현재 위치에 맞는 피난처를 조회하기 위해 위치 권한이 필요해요.</string>
+    <string name="locus_permission_blocked_title">위치 권한 거절됨</string>
+    <string name="locus_permission_blocked_message">현재 위치를 불러올 수 잆어요.</string>
+    <string name="locus_location_resolution_title">위치 사용 불가</string>
+    <string name="locus_location_resolution_message">현재 시스템의 위치 기능이 꺼져있어요.\n내 위치에 맞는 피난처를 조회하기 위해 위치 기능을 사용해 주세요.</string>
 
     <string name="activity_error_title">일시적인 오류입니다</string>
     <string name="activity_error_btn_retry">새로고침</string>
