--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,8 @@
     <string name="locus_location_resolution_title">위치 사용 불가</string>
     <string name="locus_location_resolution_message">현재 시스템의 위치 기능이 꺼져있어요.\n내 위치에 맞는 피난처를 조회하기 위해 위치 기능을 사용해 주세요.</string>
 
+    <string name="activity_map_loading_locate">내 위치 조회중…</string>
+
     <string name="activity_error_title">일시적인 오류입니다</string>
     <string name="activity_error_btn_retry">새로고침</string>
 </resources>
