--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,8 @@
 
     <string name="activity_error_title">일시적인 오류입니다</string>
     <string name="activity_error_btn_retry">새로고침</string>
+    <string name="map_navigation_flood_damage">수재/태풍</string>
+    <string name="map_navigation_volcano">화산</string>
+    <string name="map_navigation_earthquake">지진</string>
+    <string name="map_navigation_heat_wave">폭염</string>
 </resources>
