--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="map_navigation_volcano">화산</string>
     <string name="map_navigation_earthquake">지진</string>
     <string name="map_navigation_heat_wave">폭염</string>
+    <string name="activity_map_btn_refresh">새로고침</string>
 </resources>
