--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,8 @@
     <string name="map_navigation_earthquake">지진</string>
     <string name="map_navigation_heat_wave">폭염</string>
     <string name="activity_map_btn_refresh">새로고침</string>
+    <string name="layout_drawer_guide">자연재난 행동요령</string>
+    <string name="layout_drawer_message">안전 안내 문자</string>
+    <string name="layout_drawer_call">주요 기관 연락처</string>
+    <string name="layout_drawer_information">앱 정보</string>
 </resources>
