--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,20 +17,20 @@
     <string name="locus_location_resolution_title">위치 사용 불가</string>
     <string name="locus_location_resolution_message">현재 시스템의 위치 기능이 꺼져있어요.\n내 위치에 맞는 피난처를 조회하기 위해 위치 기능을 사용해 주세요.</string>
 
+    <string name="activity_error_title">오류가 발생했어요 😢</string>
+    <string name="activity_error_btn_retry">재시도</string>
+
     <string name="activity_map_loading_locate">내 위치 조회중…</string>
-
-    <string name="activity_error_title">일시적인 오류입니다</string>
-    <string name="activity_error_btn_retry">새로고침</string>
-
-    <string name="map_navigation_flood_damage">수재/태풍</string>
-    <string name="map_navigation_volcano">화산</string>
-    <string name="map_navigation_earthquake">지진</string>
-    <string name="map_navigation_heat_wave">폭염</string>
     <string name="activity_map_btn_refresh">새로고침</string>
     <string name="activity_map_drawer_guide">자연재난 행동요령</string>
     <string name="activity_map_drawer_message">안전 안내 문자</string>
     <string name="activity_map_drawer_call">주요 기관 연락처</string>
     <string name="activity_map_drawer_information">앱 정보</string>
+    <string name="activity_map_navigation_flood_damage">수재/태풍</string>
+    <string name="activity_map_navigation_volcano">화산</string>
+    <string name="activity_map_navigation_earthquake">지진</string>
+    <string name="activity_map_navigation_heat_wave">폭염</string>
+
     <string name="activity_guide_chip_all">전체</string>
     <string name="activity_guide_chip_flood">홍수</string>
     <string name="activity_guide_heavy_rain">홍수</string>
