--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,8 @@
     <string name="locus_location_resolution_title">위치 사용 불가</string>
     <string name="locus_location_resolution_message">현재 시스템의 위치 기능이 꺼져있어요.\n내 위치에 맞는 피난처를 조회하기 위해 위치 기능을 사용해 주세요.</string>
 
-    <string name="activity_error_title">오류가 발생했어요 😢</string>
+    <string name="activity_error_exception">알 수 없는 오류가 발생했어요 😢</string>d
+    <string name="activity_error_no_internet">인터넷이 불안정해요 😢</string>d
     <string name="activity_error_btn_retry">재시도</string>
 
     <string name="activity_map_loading_locate">내 위치 조회중…</string>
