--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="activity_map_drawer_guide">자연재난 행동요령</string>
     <string name="activity_map_drawer_message">안전 안내 문자</string>
     <string name="activity_map_drawer_contact">주요 기관 연락처</string>
+    <string name="activity_map_drawer_opensource_license">오픈소스 라이선스</string>
     <string name="activity_map_drawer_information">앱 정보</string>
     <string name="activity_map_navigation_flood_damage">수재/태풍</string>
     <string name="activity_map_navigation_volcano">화산</string>
